{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 246,
  "lineage": "20dda948-a22a-96f4-33bf-56628e48d92b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb_ip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-027ddaf86bf830517",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-156-19.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.156.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb_ip_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e414d65b27dabb8e",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-233-87.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.233.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cmk_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aca50ab363c207ad",
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:instance/i-0f23b24a90df19c6f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f23b24a90df19c6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "th-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012773bb315954797",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_ip": "3.36.55.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-03d1ecd1e9afd7566",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e796fbf2c69049cf",
            "tags": {
              "Name": "cmk-weba"
            },
            "tags_all": {
              "Name": "cmk-weba"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b7053a5672f2056"
            ]
          },
          "dependencies": [
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_puba",
            "aws_vpc.cmk_vpc",
            "data.aws_ami.amzn"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cmk_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:internet-gateway/igw-0215d4f2477e2d8ca",
            "id": "igw-0215d4f2477e2d8ca",
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk-ig"
            },
            "tags_all": {
              "Name": "cmk-ig"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cmk_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:loadbalancer/app/cmk-alb/ccc9cfff1942c88d",
            "arn_suffix": "app/cmk-alb/ccc9cfff1942c88d",
            "dns_name": "cmk-alb-1982779979.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:loadbalancer/app/cmk-alb/ccc9cfff1942c88d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cmk-alb",
            "security_groups": [
              "sg-08b7053a5672f2056"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e796fbf2c69049cf"
              },
              {
                "subnet_id": "subnet-0f1878fabde4decd3"
              }
            ],
            "subnets": [
              "subnet-0e796fbf2c69049cf",
              "subnet-0f1878fabde4decd3"
            ],
            "tags": {
              "Name": "cmk-alb"
            },
            "tags_all": {
              "Name": "cmk-alb"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_puba",
            "aws_subnet.cmk_pubc",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cmk_lblist",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:listener/app/cmk-alb/ccc9cfff1942c88d/6204529931aa4bce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/5f3c29863d6f45d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:listener/app/cmk-alb/ccc9cfff1942c88d/6204529931aa4bce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:loadbalancer/app/cmk-alb/ccc9cfff1942c88d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cmk_lb",
            "aws_lb_target_group.cmk_lbtg",
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_puba",
            "aws_subnet.cmk_pubc",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cmk_lbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/5f3c29863d6f45d6",
            "arn_suffix": "targetgroup/cmk-lbtg/5f3c29863d6f45d6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/5f3c29863d6f45d6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cmk-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "cml_lbtg_att",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/5f3c29863d6f45d6-20211101000840809900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/5f3c29863d6f45d6",
            "target_id": "i-0f23b24a90df19c6f"
          },
          "dependencies": [
            "aws_instance.cmk_weba",
            "aws_lb_target_group.cmk_lbtg",
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_puba",
            "aws_vpc.cmk_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cmk_nga-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027ddaf86bf830517",
            "connectivity_type": "public",
            "id": "nat-0afc67f844dcc7ba6",
            "network_interface_id": "eni-07c9167d84c0d78aa",
            "private_ip": "10.0.1.138",
            "public_ip": "3.36.156.19",
            "subnet_id": "subnet-0b89af5086912565f",
            "tags": {
              "Name": "cmk-nga-a"
            },
            "tags_all": {
              "Name": "cmk-nga-a"
            }
          },
          "dependencies": [
            "aws_eip.lb_ip_a",
            "aws_subnet.cmk_pria",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cmk_nga-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e414d65b27dabb8e",
            "connectivity_type": "public",
            "id": "nat-06df532cd0389edde",
            "network_interface_id": "eni-09d3ce0dfb5a94276",
            "private_ip": "10.0.3.202",
            "public_ip": "13.209.233.87",
            "subnet_id": "subnet-013808666893db354",
            "tags": {
              "Name": "cmk-nga-c"
            },
            "tags_all": {
              "Name": "cmk-nga-c"
            }
          },
          "dependencies": [
            "aws_eip.lb_ip_c",
            "aws_subnet.cmk_pric",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmk_ngart_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:route-table/rtb-0a55d22cd623a1684",
            "id": "rtb-0a55d22cd623a1684",
            "owner_id": "424215643714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0afc67f844dcc7ba6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmk-nga-rta"
            },
            "tags_all": {
              "Name": "cmk-nga-rta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb_ip_a",
            "aws_nat_gateway.cmk_nga-a",
            "aws_subnet.cmk_pria",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmk_ngart_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:route-table/rtb-0405f893da3058bc6",
            "id": "rtb-0405f893da3058bc6",
            "owner_id": "424215643714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06df532cd0389edde",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmk-nga-rtc"
            },
            "tags_all": {
              "Name": "cmk-nga-rtc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb_ip_c",
            "aws_nat_gateway.cmk_nga-c",
            "aws_subnet.cmk_pric",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmk_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:route-table/rtb-0ce3c1e8e7d9a67db",
            "id": "rtb-0ce3c1e8e7d9a67db",
            "owner_id": "424215643714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0215d4f2477e2d8ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmk-rt"
            },
            "tags_all": {
              "Name": "cmk-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cmk_ig",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cmk-rtas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0977c59b6acd7846f",
            "route_table_id": "rtb-0ce3c1e8e7d9a67db",
            "subnet_id": "subnet-0e796fbf2c69049cf"
          },
          "dependencies": [
            "aws_internet_gateway.cmk_ig",
            "aws_route_table.cmk_rt",
            "aws_subnet.cmk_puba",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cmk-rtas_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fc5f6992979100e",
            "route_table_id": "rtb-0ce3c1e8e7d9a67db",
            "subnet_id": "subnet-0f1878fabde4decd3"
          },
          "dependencies": [
            "aws_internet_gateway.cmk_ig",
            "aws_route_table.cmk_rt",
            "aws_subnet.cmk_pubc",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cmk_ngartas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015dc7096d5cabe4c",
            "route_table_id": "rtb-0a55d22cd623a1684",
            "subnet_id": "subnet-0b89af5086912565f"
          },
          "dependencies": [
            "aws_eip.lb_ip_a",
            "aws_nat_gateway.cmk_nga-a",
            "aws_route_table.cmk_ngart_a",
            "aws_subnet.cmk_pria",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cmk_ngartas_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022d165a87059a08c",
            "route_table_id": "rtb-0405f893da3058bc6",
            "subnet_id": "subnet-013808666893db354"
          },
          "dependencies": [
            "aws_eip.lb_ip_c",
            "aws_nat_gateway.cmk_nga-c",
            "aws_route_table.cmk_ngart_c",
            "aws_subnet.cmk_pric",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cmk_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:security-group/sg-08b7053a5672f2056",
            "description": "http-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b7053a5672f2056",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow-WEB",
            "name_prefix": "",
            "owner_id": "424215643714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cmk-sg"
            },
            "tags_all": {
              "Name": "cmk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-0b89af5086912565f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b89af5086912565f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk-pria"
            },
            "tags_all": {
              "Name": "cmk-pria"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-013808666893db354",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-013808666893db354",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk-pric"
            },
            "tags_all": {
              "Name": "cmk-pric"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pridba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-06976dbef74f9144f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06976dbef74f9144f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "sdkim-pridba"
            },
            "tags_all": {
              "Name": "sdkim-pridba"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pridbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-00fb183edda6abf05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00fb183edda6abf05",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "sdkim-pridbc"
            },
            "tags_all": {
              "Name": "sdkim-pridbc"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-0e796fbf2c69049cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e796fbf2c69049cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk-puba"
            },
            "tags_all": {
              "Name": "cmk-puba"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-0f1878fabde4decd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f1878fabde4decd3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk-pubc"
            },
            "tags_all": {
              "Name": "cmk-pubc"
            },
            "vpc_id": "vpc-0ebf5484b41363eb3"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cmk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:vpc/vpc-0ebf5484b41363eb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084cae7b3b71fa472",
            "default_route_table_id": "rtb-07162aae01507c524",
            "default_security_group_id": "sg-0aebbb4202565a4a7",
            "dhcp_options_id": "dopt-390b4652",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ebf5484b41363eb3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07162aae01507c524",
            "owner_id": "424215643714",
            "tags": {
              "name": "cmk-vpc"
            },
            "tags_all": {
              "name": "cmk-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}